templates/network/vpc-private.yml
AWSTemplateFormatVersion: 2010-09-09
Description: 'VPC Stack'

# -------------------------------------
# Metadata
# -------------------------------------
Metadata:
  # 入力パラメータのグループ化と順序を指定
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Common Configuration"
        Parameters:
          - ProjectName
          - Environment
      - Label:
          default: "VPC Configuration"
        Parameters:
          - VPCCIDR
          - ELBPublicSubnet1CIDR
          - ELBPublicSubnet2CIDR
          - ECSPrivateSubnet1CIDR
          - ECSPrivateSubnet2CIDR
          - RDSPrivateSubnet1CIDR
          - RDSPrivateSubnet2CIDR
          - LambdaPrivateSubnet1CIDR
          - LambdaPrivateSubnet2CIDR
          - NATPublicSubnet1CIDR
          - NATPublicSubnet2CIDR

# -------------------------------------
# Parameters
# -------------------------------------
Parameters:
  ProjectName:
    Description: "Please type the ProjectName. (ex: my-project)"
    Type: String
    Default: my-project
    ConstraintDescription: "ProjectName is required."
    MinLength: 1
  Environment:
    Description: "Please select Environment."
    Type: String
    Default: dev
    AllowedValues:
      - dev
      - stg
      - prd
    ConstraintDescription: "Environment must be select."
  VPCCIDR:
    Description: "Please type the VPC CIDR."
    Type: String
    Default: 10.0.0.0/16
  ELBPublicSubnet1CIDR:
    Description: "Please type the ELB Public Subnet 1 CIDR."
    Type: String
    Default: 10.0.1.0/24
  ELBPublicSubnet2CIDR:
    Description: "Please type the ELB Public Subnet 2 CIDR."
    Type: String
    Default: 10.0.2.0/24
  ECSPrivateSubnet1CIDR:
    Description: "Please type the ECS Public Subnet 1 CIDR."
    Type: String
    Default: 10.0.3.0/24
  ECSPrivateSubnet2CIDR:
    Description: "Please type the ECS Public Subnet 2 CIDR."
    Type: String
    Default: 10.0.4.0/24
  RDSPrivateSubnet1CIDR:
    Description: "Please type the RDS Private Subnet 1 CIDR."
    Type: String
    Default: 10.0.5.0/24
  RDSPrivateSubnet2CIDR:
    Description: "Please type the RDS Private Subnet 2 CIDR."
    Type: String
    Default: 10.0.6.0/24
  LambdaPrivateSubnet1CIDR:
    Description: "Please type the Lambda Private Subnet 1 CIDR."
    Type: String
    Default: 10.0.7.0/24
  LambdaPrivateSubnet2CIDR:
    Description: "Please type the Lambda Private Subnet 2 CIDR."
    Type: String
    Default: 10.0.8.0/24
  NATPublicSubnet1CIDR:
    Description: "Please type the NAT Gateway Public Subnet 1 CIDR."
    Type: String
    Default: 10.0.9.0/24
  NATPublicSubnet2CIDR:
    Description: "Please type the NAT Gateway Public Subnet 2 CIDR."
    Type: String
    Default: 10.0.10.0/24

# -------------------------------------
# Resources
# -------------------------------------
Resources:
  # -------------------------------------
  # VPC
  # -------------------------------------
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      # Route53の設定
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-vpc
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment

  # -------------------------------------
  # Internet Gateway
  # -------------------------------------
  # VPC内にインターネットゲートウェイがないとパブリックサブネットからインターネットへアクセスできないので作成
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          # Parametersで入力した値を対応する変数に置き換える
          # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference-sub.html
          Value: !Sub ${ProjectName}-${Environment}-igw
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment

  # インターネットゲートウェイをVPCにアタッチする
  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId : !Ref InternetGateway

  # -------------------------------------
  # Public Subnet
  # -------------------------------------
  ELBPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      VpcId: !Ref VPC
      CidrBlock: !Ref ELBPublicSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-pub-alb",
                !Select [2, !Split ["-", !Select [0, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  ELBPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      VpcId: !Ref VPC
      CidrBlock: !Ref ELBPublicSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-pub-alb",
                !Select [2, !Split ["-", !Select [1, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  # For NAT Gateway
  NATPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      VpcId: !Ref VPC
      CidrBlock: !Ref NATPublicSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-pub-natgw",
                !Select [2, !Split ["-", !Select [0, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  NATPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      VpcId: !Ref VPC
      CidrBlock: !Ref NATPublicSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-pub-natgw",
                !Select [2, !Split ["-", !Select [1, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment

  # -------------------------------------
  # Private Subnet
  # -------------------------------------
  ECSPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref ECSPrivateSubnet1CIDR
      # プライベートなのでfalseにする
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-priv-ecs",
                !Select [2, !Split ["-", !Select [0, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  ECSPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref ECSPrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-priv-ecs",
                !Select [2, !Split ["-", !Select [1, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  RDSPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      # パブリックIPv4アドレスの自動割り当て
      # プライベートなのでfalseにする
      CidrBlock: !Ref RDSPrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      # VPCのLogicalIDを!Refで参照してあげることでVPCのIDを自動的に当てはめる
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-priv-rds",
                !Select [2, !Split ["-", !Select [0, !GetAZs ""]]],
              ],
            ]
  RDSPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ""]
      VpcId: !Ref VPC
      CidrBlock: !Ref RDSPrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-priv-rds",
                !Select [2, !Split ["-", !Select [1, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  LambdaPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref LambdaPrivateSubnet1CIDR
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-priv-lambda",
                !Select [2, !Split ["-", !Select [0, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  LambdaPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref LambdaPrivateSubnet2CIDR
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value:
            !Join [
              "-",
              [
                !Sub "${ProjectName}-${Environment}-priv-lambda",
                !Select [2, !Split ["-", !Select [1, !GetAZs ""]]],
              ],
            ]
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  # -------------------------------------
  # Public Route Table
  # -------------------------------------
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-pub-rtb
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  PublicRoute:
    Type: AWS::EC2::Route
    # インターネットゲートウェイと紐付ける
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      # インターネット(0.0.0.0/0)へのアクセスを許可
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  # ルートテーブルとサブネットを紐づける
  ELBPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ELBPublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  ELBPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ELBPublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  # For NAT Gateway
  NATPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NATPublicSubnet1
      RouteTableId: !Ref PublicRouteTable
  NATPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref NATPublicSubnet2
      RouteTableId: !Ref PublicRouteTable
  # -------------------------------------
  # Private Route Table
  # -------------------------------------
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-priv-rtb
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  PrivateRoute1:
    Type: AWS::EC2::Route
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1
  PrivateRoute2:
    Type: AWS::EC2::Route
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway2
  RDSPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RDSPrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  RDSPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref RDSPrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable
  # For ECS
  ECSPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ECSPrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  ECSPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ECSPrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable
  # For Lambda
  LambdaPrivateSubnet1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref LambdaPrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable
  LambdaPrivateSubnet2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref LambdaPrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable
  # -------------------------------------
  # Nat Gateway
  # -------------------------------------
  # NatGateway用のElastic IP
  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-eip1
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  NatGatewayEIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-eip2
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment

  # NatGatewayの設定
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      # パブリックサブネットaに作成したElasticIPをNATに割り当てる(allocateする)
      AllocationId: !GetAtt NatGatewayEIP1.AllocationId
      SubnetId: !Ref NATPublicSubnet1
      Tags:
        - Key: Name
          Value: NatGateway
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP2.AllocationId
      SubnetId: !Ref NATPublicSubnet2
      Tags:
        - Key: Name
          Value: NatGateway

# -------------------------------------
# Outputs
# -------------------------------------
# https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/outputs-section-structure.html
Outputs:
  VPC:
    Description: "A reference to the created VPC."
    Value: !Ref VPC
  PublicSubnets:
    Description: "A list of the public subnets."
    Value:
      !Join [
        ",",
        [
          !Ref ECSPrivateSubnet1,
          !Ref ECSPrivateSubnet2,
          !Ref ELBPublicSubnet1,
          !Ref ELBPublicSubnet2,
        ],
      ]
  PrivateSubnets:
    Description: "A list of the private subnets."
    Value: !Join [",", [!Ref RDSPrivateSubnet1, !Ref RDSPrivateSubnet2]]
  ELBPublicSubnet1:
    Description: "A reference to the public subnet in the 1st Availability Zone."
    Value: !Ref ELBPublicSubnet1
  ELBPublicSubnet2:
    Description: "A reference to the public subnet in the 2nd Availability Zone."
    Value: !Ref ELBPublicSubnet2
  ECSPrivateSubnet1:
    Description: "A reference to the public subnet in the 1st Availability Zone."
    Value: !Ref ECSPrivateSubnet1
  ECSPrivateSubnet2:
    Description: "A reference to the public subnet in the 2nd Availability Zone."
    Value: !Ref ECSPrivateSubnet2
  RDSPrivateSubnet1:
    Description: "A reference to the private subnet in the 1st Availability Zone."
    Value: !Ref RDSPrivateSubnet1
  RDSPrivateSubnet2:
    Description: "A reference to the private subnet in the 2nd Availability Zone."
    Value: !Ref RDSPrivateSubnet2
  LambdaPrivateSubnet1:
    Description: "A reference to the private subnet in the 1st Availability Zone."
    Value: !Ref LambdaPrivateSubnet1
  LambdaPrivateSubnet2:
    Description: "A reference to the private subnet in the 2nd Availability Zone."
    Value: !Ref LambdaPrivateSubnet2
